# dimos

./: NEWREADME.MD  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: code-cleanup.yml  quickstart-ci.yml
autoresearch/: optimizations.py
dimos/agents/: agent.py  system_prompt.py  voice_trial.py
dimos/agents/evals/: schema_extractor.py
dimos/agents/mcp/: mcp_client.py  mcp_server.py
dimos/agents/skills/: person_follow.py
dimos/agents2/skills/: navigation.py
dimos/control/: coordinator.py  orchestrator.py  task.py  tick_loop.py
dimos/control/blueprints/: _hardware.py
dimos/control/tasks/: teleop_task.py
dimos/core/: arduino_module.py  blueprints.py  global_config.py  module.py  module_coordinator.py  native_module.py  rpc_client.py  test_blueprints.py  test_native_module.py
dimos/core/resource_monitor/: monitor.py
dimos/dashboard/: __init__.py  rerun_blueprint.py  rerun_init.py  rerun_tap.py  rerun_tf_tap.py
dimos/dashboard/examples/: dask_actor_direct.py
dimos/hardware/: ft_pull_skill.py  ft_pull_test.py  lerobot_kinematics.py  so101_arm.py
dimos/hardware/so101_utils/: so101_interface.py
dimos/manipulation/: blueprints.py  manipulation_module.py  pick_and_place_module.py
dimos/mapping/: costmapper.py  test_voxels.py  voxels.py
dimos/memory/: formatting.py  stream.py  test_projection.py  test_stream_repr.py  test_transformer.py  transformer.py
dimos/memory2/: __init__.py  module.py  stream.py  test_e2e.py  test_impl.py  test_module.py  test_save.py  transform.py
dimos/navigation/: rosnav_docker.py
dimos/perception/: demo_object_scene_registration.py  object_scene_registration.py  object_tracker.py  object_tracker_2d.py
dimos/robot/: all_blueprints.py  foxglove_bridge.py
dimos/utils/: change_detect.py  logging_config.py  metrics.py  prompt.py  test_thread_utils.py
dimos/visualization/: vis_module.py
docs/: development.md
docs/concepts/: modules.md
docs/usage/: visualization.md
examples/arduino_led_echo/: .gitignore
hackathon/: people_monitor.py  surveillance_skill.py  surveillance_store.py
hackathon/tests/: test_people_monitor.py  test_skills_feed.py  test_surveillance.py
installer/: installer.pyz.REMOVED.git-id
scripts/: run_inference.py
tests/: test_so101_pick_and_place.py
(+189 files in other folders)
