[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dimos"
version = "0.1.0"
description = "A dimensional operating system for robotics and embodied AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "dimos contributors" },
]
keywords = ["robotics", "ai", "agents", "ros2", "embodied-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "pillow>=10.0",
  "pydantic>=2.0",
  "reactivex>=4.0",
  "openai>=1.0",
  "anthropic>=0.25",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "websockets>=12.0",
]

[project.optional-dependencies]
ros2 = [
  "rclpy",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/dimensionalOS/dimos"
Repository = "https://github.com/dimensionalOS/dimos"
Issues = "https://github.com/dimensionalOS/dimos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dimos*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# removed --cov flags so a quick `pytest` run doesn't require pytest-cov installed locally
# -p no:warnings keeps output clean during local experimentation
# added -x so the test run stops on the first failure — saves time when iterating locally
addopts = "-v -p no:warnings -x"
